Remove security attributes from HTTP body if default
