# security/examples/calc/calc/gen/http/calc/server/encode_decode.go
@@ -90,24 +90,10 @@ func EncodeAddResponse(encoder func(context.Context, http.ResponseWriter) goahtt
 func DecodeAddRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
 	return func(r *http.Request) (interface{}, error) {
 		var (
-			body AddRequestBody
-			err  error
-		)
-		err = decoder(r).Decode(&body)
-		if err != nil {
-			if err == io.EOF {
-				return nil, goa.MissingPayloadError()
-			}
-			return nil, goa.DecodePayloadError(err.Error())
-		}
-		err = body.Validate()
-		if err != nil {
-			return nil, err
-		}
-
-		var (
-			a int
-			b int
+			a     int
+			b     int
+			token string
+			err   error
 
 			params = mux.Vars(r)
 		)
@@ -127,11 +113,15 @@ func DecodeAddRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Dec
 			}
 			b = int(v)
 		}
+		token = r.Header.Get("Authorization")
+		if token == "" {
+			err = goa.MergeErrors(err, goa.MissingFieldError("Authorization", "header"))
+		}
 		if err != nil {
 			return nil, err
 		}
 
-		return NewAddAddPayload(&body, a, b), nil
+		return NewAddAddPayload(a, b, token), nil
 	}
 }
 
