# security/examples/multi_auth/gen/http/secured_service/server/encode_decode.go
@@ -85,19 +85,9 @@ func EncodeSecureResponse(encoder func(context.Context, http.ResponseWriter) goa
 func DecodeSecureRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
 	return func(r *http.Request) (interface{}, error) {
 		var (
-			body SecureRequestBody
-			err  error
-		)
-		err = decoder(r).Decode(&body)
-		if err != nil {
-			if err == io.EOF {
-				return nil, goa.MissingPayloadError()
-			}
-			return nil, goa.DecodePayloadError(err.Error())
-		}
-
-		var (
-			fail *bool
+			fail  *bool
+			token *string
+			err   error
 		)
 		{
 			failRaw := r.URL.Query().Get("fail")
@@ -109,11 +99,15 @@ func DecodeSecureRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.
 				fail = &v
 			}
 		}
+		tokenRaw := r.Header.Get("Authorization")
+		if tokenRaw != "" {
+			token = &tokenRaw
+		}
 		if err != nil {
 			return nil, err
 		}
 
-		return NewSecureSecurePayload(&body, fail), nil
+		return NewSecureSecurePayload(fail, token), nil
 	}
 }
 
@@ -152,26 +146,19 @@ func EncodeDoublySecureResponse(encoder func(context.Context, http.ResponseWrite
 func DecodeDoublySecureRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
 	return func(r *http.Request) (interface{}, error) {
 		var (
-			body DoublySecureRequestBody
-			err  error
-		)
-		err = decoder(r).Decode(&body)
-		if err != nil {
-			if err == io.EOF {
-				return nil, goa.MissingPayloadError()
-			}
-			return nil, goa.DecodePayloadError(err.Error())
-		}
-
-		var (
-			key *string
+			key   *string
+			token *string
 		)
 		keyRaw := r.URL.Query().Get("k")
 		if keyRaw != "" {
 			key = &keyRaw
 		}
+		tokenRaw := r.Header.Get("Authorization")
+		if tokenRaw != "" {
+			token = &tokenRaw
+		}
 
-		return NewDoublySecureDoublySecurePayload(&body, key), nil
+		return NewDoublySecureDoublySecurePayload(key, token), nil
 	}
 }
 
@@ -222,14 +209,24 @@ func DecodeAlsoDoublySecureRequest(mux goahttp.Muxer, decoder func(*http.Request
 		}
 
 		var (
-			key *string
+			key        *string
+			token      *string
+			oauthToken *string
 		)
 		keyRaw := r.Header.Get("Authorization")
 		if keyRaw != "" {
 			key = &keyRaw
 		}
+		tokenRaw := r.Header.Get("Authorization")
+		if tokenRaw != "" {
+			token = &tokenRaw
+		}
+		oauthTokenRaw := r.Header.Get("Authorization")
+		if oauthTokenRaw != "" {
+			oauthToken = &oauthTokenRaw
+		}
 
-		return NewAlsoDoublySecureAlsoDoublySecurePayload(&body, key), nil
+		return NewAlsoDoublySecureAlsoDoublySecurePayload(&body, key, token, oauthToken), nil
 	}
 }
 
@@ -307,7 +304,7 @@ func SecureDecodeDoublySecureRequest(mux goahttp.Muxer, decoder func(*http.Reque
 		}
 		tokenJWT := strings.TrimPrefix(hJWT, "Bearer ")
 		payload.Token = &tokenJWT
-		key := r.URL.Query().Get("k")
+		key := r.Header.Get("Authorization")
 		if key == "" {
 			return p, nil
 		}
