# security/examples/multi_auth/gen/http/secured_service/server/types.go
@@ -20,20 +20,6 @@ type SigninRequestBody struct {
 	Password *string `form:"password,omitempty" json:"password,omitempty" xml:"password,omitempty"`
 }
 
-// SecureRequestBody is the type of the "secured_service" service "secure"
-// endpoint HTTP request body.
-type SecureRequestBody struct {
-	// JWT used for authentication
-	Token *string `form:"token,omitempty" json:"token,omitempty" xml:"token,omitempty"`
-}
-
-// DoublySecureRequestBody is the type of the "secured_service" service
-// "doubly_secure" endpoint HTTP request body.
-type DoublySecureRequestBody struct {
-	// JWT used for authentication
-	Token *string `form:"token,omitempty" json:"token,omitempty" xml:"token,omitempty"`
-}
-
 // AlsoDoublySecureRequestBody is the type of the "secured_service" service
 // "also_doubly_secure" endpoint HTTP request body.
 type AlsoDoublySecureRequestBody struct {
@@ -41,9 +27,6 @@ type AlsoDoublySecureRequestBody struct {
 	Username *string `form:"username,omitempty" json:"username,omitempty" xml:"username,omitempty"`
 	// Username used to perform signin
 	Password *string `form:"password,omitempty" json:"password,omitempty" xml:"password,omitempty"`
-	// JWT used for authentication
-	Token      *string `form:"token,omitempty" json:"token,omitempty" xml:"token,omitempty"`
-	OauthToken *string `form:"oauth_token,omitempty" json:"oauth_token,omitempty" xml:"oauth_token,omitempty"`
 }
 
 // SigninUnauthorizedResponseBody is the type of the "secured_service" service
@@ -105,33 +88,31 @@ func NewSigninSigninPayload(body *SigninRequestBody) *securedservice.SigninPaylo
 
 // NewSecureSecurePayload builds a secured_service service secure endpoint
 // payload.
-func NewSecureSecurePayload(body *SecureRequestBody, fail *bool) *securedservice.SecurePayload {
-	v := &securedservice.SecurePayload{
-		Token: body.Token,
+func NewSecureSecurePayload(fail *bool, token *string) *securedservice.SecurePayload {
+	return &securedservice.SecurePayload{
+		Fail:  fail,
+		Token: token,
 	}
-	v.Fail = fail
-	return v
 }
 
 // NewDoublySecureDoublySecurePayload builds a secured_service service
 // doubly_secure endpoint payload.
-func NewDoublySecureDoublySecurePayload(body *DoublySecureRequestBody, key *string) *securedservice.DoublySecurePayload {
-	v := &securedservice.DoublySecurePayload{
-		Token: body.Token,
+func NewDoublySecureDoublySecurePayload(key *string, token *string) *securedservice.DoublySecurePayload {
+	return &securedservice.DoublySecurePayload{
+		Key:   key,
+		Token: token,
 	}
-	v.Key = key
-	return v
 }
 
 // NewAlsoDoublySecureAlsoDoublySecurePayload builds a secured_service service
 // also_doubly_secure endpoint payload.
-func NewAlsoDoublySecureAlsoDoublySecurePayload(body *AlsoDoublySecureRequestBody, key *string) *securedservice.AlsoDoublySecurePayload {
+func NewAlsoDoublySecureAlsoDoublySecurePayload(body *AlsoDoublySecureRequestBody, key *string, token *string, oauthToken *string) *securedservice.AlsoDoublySecurePayload {
 	v := &securedservice.AlsoDoublySecurePayload{
-		Username:   body.Username,
-		Password:   body.Password,
-		Token:      body.Token,
-		OauthToken: body.OauthToken,
+		Username: body.Username,
+		Password: body.Password,
 	}
 	v.Key = key
+	v.Token = token
+	v.OauthToken = oauthToken
 	return v
 }
